--- a/package.json
+++ b/package.json
@@ -19,5 +19,14 @@
   },
   "dependencies": {
     "socket.io-client": "^2.0.4"
+  },
+  "devDependencies": {
+    "babel-eslint": "^7.2.3",
+    "eslint": "^4.18.2",
+    "eslint-config-airbnb": "^15.1.0",
+    "eslint-plugin-import": "^2.7.0",
+    "eslint-plugin-jsx-a11y": "^5.1.1",
+    "eslint-plugin-react": "^7.3.0",
+    "poi-util-transpile": "^7.6.2"
   }
 }
