--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "poi-plugin-chatroom",
   "version": "1.0.0",
-  "description": "a plugin for chat in poi",
+  "description": "A chatroom plugin for poi",
   "main": "index.es",
   "repository": {
     "type": "git",
@@ -14,7 +14,7 @@
   "license": "MIT",
   "poiPlugin": {
     "title": "Chatroom",
-    "description": "Chatroom Description",
+    "description": "Just Chat",
     "icon": "fa/comments"
   },
   "dependencies": {
