--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "poi-plugin-chatroom",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "A chatroom plugin for poi",
   "main": "index.es",
   "repository": {
@@ -17,9 +17,7 @@
     "description": "Just Chat",
     "icon": "fa/comments"
   },
-  "dependencies": {
-    "socket.io-client": "^2.0.4"
-  },
+  "dependencies": {},
   "devDependencies": {
     "babel-eslint": "^7.2.3",
     "eslint": "^4.18.2",
